# SimpleMQTTGateWayStack

./: .gitignore  .gitmodules  ReadMe.md
doc/: MQTT消息格式.xlsx  SimpleMQTTGateWayProtocol.md
doc/Protocol/: MQTT消息格式.xlsx  ReadMe.md
lib/: CMakeLists.txt  libSMGS.C  libSMGS.c  libSMGS.h  libSMGSUtil.c  libSMGSUtil.h  libSMGS_DefaultConfig.h
lib/include/: libSMGS.h  libSMGS_DefaultConfig.h
tests/GateWaySimulator/: CMakeLists.txt  MQTTPort.c  MQTTPort.h  main.cpp
tools/SMGSDebugTool/: CMakeLists.txt  Device.xpm  GateWay.xpm  GuiGateWayDetector.cpp  GuiGateWayDetector.h  GuiGateWayPage.cpp  GuiGateWayPage.h  GuiMQTTDialog.cpp  GuiMQTTDialog.h  GuiMQTTMessagePage.cpp  GuiMQTTMessagePage.h  GuiMainPage.cpp  GuiMainPage.h  GuiSendMQTTRawMessageDialog.cpp  GuiSendMQTTRawMessageDialog.h  InternalDatabase.cpp  InternalDatabase.h  MQTTClient.c  MQTTClient.h  MQTTClientThread.cpp  MQTTClientThread.h  MQTTPort.c  MQTTPort.h  ReadMe.md  Res.cpp  Res.h  SMGSDebugToolApp.cpp  SMGSDebugToolApp.h  SMGSDebugToolMain.cpp  SMGSDebugToolMain.h  SMGSDeubgToolApp.cpp  SMGSDeubgToolApp.h  SMGSDeubgToolMain.cpp  SMGSDeubgToolMain.h  logo.xpm
tools/SMGSDebugTool/MainFrame/: GUIFrame.cpp  GUIFrame.h  GuiFrame.cpp  GuiFrame.h  MainFrame.fbp
tools/SMGSDebugTool/win32/: window_resources.rc
tools/lib/: CMakeLists.txt  libSMGS-Server.c  libSMGS-Server.h
